--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -81,8 +81,22 @@ select option {
 	transition: all 0.2s ease;
 }
 
+
+
 .text-shadow {
-	text-shadow: 0px 2px 3px rgba(0, 0, 0, 0.1);
+	text-shadow: 2px 4px 4px rgba(0, 0, 0, 0.1);
+}
+
+svg.text-shadow, .text-shadow svg {
+	filter: drop-shadow( 2px 4px 4px rgba(0, 0, 0, 0.1) );
+}
+
+.text-shadow-sm {
+	text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.1);
+}
+
+svg.text-shadow-sm, .text-shadow-sm svg {
+	filter: drop-shadow( 1px 2px 2px rgba(0, 0, 0, 0.1) );
 }
 
 .cube1,
