--- a/src/index.css
+++ b/src/index.css
@@ -5174,17 +5174,54 @@ svg.text-shadow-sm,
 }
 
 .pop-appear {
-  opacity: .01;
-  -webkit-transform: scale(0);
-          transform: scale(0);
+  -webkit-animation: pop 400ms ease;
+          animation: pop 400ms ease;
+  transition: all 400ms ease;
 }
 
-.pop-appear-active {
+.pop-appear-done {
   opacity: 1;
   -webkit-transform: scale(1);
           transform: scale(1);
-  transition: all 225ms ease;
-  transition-delay: 0s;
+  transition: all 400ms ease;
+}
+
+@-webkit-keyframes pop {
+  0% {
+    opacity: .01;
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+
+  50% {
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
+  }
+
+  100% {
+    opacity: 1;
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+@keyframes pop {
+  0% {
+    opacity: .01;
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+
+  50% {
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
+  }
+
+  100% {
+    opacity: 1;
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
 }
 
 @media (min-width: 450px) {
