--- a/src/index.css
+++ b/src/index.css
@@ -5268,31 +5268,32 @@ svg.text-shadow-sm,
 
 ul.piano li {
   position: relative;
-  border-radius: 2px;
+  border-radius: .125rem;
   display: inline-block;
   list-style: none;
-  width: 25px;
-  height: 120px;
+  padding: 0;
+  width: 1.5rem;
+  height: 8rem;
   margin: 0;
-  box-shadow: 0 3px 3px rgba(0, 0, 0, .1);
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .1);
 }
 
 ul.piano li.black-key {
   z-index: 20;
-  background: black;
+  background-color: #22292f;
+  position: absolute;
   -webkit-transform-origin: center top;
           transform-origin: center top;
-  position: absolute;
   -webkit-transform: translateX(-50%) scale(.6);
           transform: translateX(-50%) scale(.6);
 }
 
 ul.piano li.white-key {
-  background: white;
+  background-color: #fff;
 }
 
 ul.piano li.pressed {
-  background: rgba(255, 0, 0, .2);
+  background: #fcc;
 }
 
 @media (min-width: 450px) {
