--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -212,26 +212,17 @@ svg.text-shadow-sm, .text-shadow-sm svg {
 }
 
   ul.piano li {
-	position: relative;
-	border-radius: 2px;
-	display: inline-block;
-	list-style: none;
-	width: 25px;
-	height: 120px;
-	margin: 0;
-	box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.1);
+	@apply relative rounded-sm inline-block list-reset w-6 h-32 m-0 shadow;
   }
   ul.piano li.black-key {
-	z-index: 20;
-	background: black;
+	@apply z-20 bg-black absolute;
 	transform-origin: center top;
-	position: absolute;
 	transform: translateX(-50%) scale(0.6);
   }
   ul.piano li.white-key {
-	background: white;
+	@apply bg-white;
   }
   ul.piano li.pressed {
-	background: rgba(255, 0, 0, 0.2);
+	background: #ffcccc;
   }
   
