--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -85,21 +85,26 @@ select option {
 	transition: all 0.2s ease;
 }
 
-
 .text-shadow {
 	text-shadow: 2px 4px 4px rgba(0, 0, 0, 0.1);
 }
 
-svg.text-shadow, .text-shadow svg {
-	filter: drop-shadow( 2px 4px 4px rgba(0, 0, 0, 0.1) );
+svg.text-shadow,
+.text-shadow svg,
+img.text-shadow,
+.text-shadow img {
+	filter: drop-shadow(2px 4px 4px rgba(0, 0, 0, 0.1));
 }
 
 .text-shadow-sm {
 	text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.1);
 }
 
-svg.text-shadow-sm, .text-shadow-sm svg {
-	filter: drop-shadow( 1px 2px 2px rgba(0, 0, 0, 0.1) );
+svg.text-shadow-sm,
+.text-shadow-sm svg,
+img.text-shadow-sm,
+.text-shadow-sm img {
+	filter: drop-shadow(1px 2px 2px rgba(0, 0, 0, 0.1));
 }
 
 .cube1,
@@ -167,11 +172,10 @@ svg.text-shadow-sm, .text-shadow-sm svg {
 	transition: all 400ms ease;
 }
 
-
 @keyframes pop {
 	0% {
 		opacity: 0.01;
-		transform: scale(0)
+		transform: scale(0);
 	}
 	50% {
 		transform: scale(1.1);
@@ -211,18 +215,17 @@ svg.text-shadow-sm, .text-shadow-sm svg {
 	}
 }
 
-  ul.piano li {
+ul.piano li {
 	@apply relative rounded-sm inline-block list-reset w-6 h-32 m-0 shadow;
-  }
-  ul.piano li.black-key {
+}
+ul.piano li.black-key {
 	@apply z-20 bg-black absolute;
 	transform-origin: center top;
 	transform: translateX(-50%) scale(0.6);
-  }
-  ul.piano li.white-key {
+}
+ul.piano li.white-key {
 	@apply bg-white;
-  }
-  ul.piano li.pressed {
+}
+ul.piano li.pressed {
 	background: #ffcccc;
-  }
-  
+}
